# web3_rust_bridge

./: .gitignore  README.md  build_xcframework.sh  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: aleo.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build.rs
rust/ios_curl/: build_curl_for_ios.md
rust/ios_curl/artifacts-iphonesimulator/lib/: libcurl.4.dylib  libcurl.dylib
rust/src/: frb_generated.rs  lib.rs
rust/src/aleo/: blocking.rs  broadcast.md  delegate.rs  mod.rs
rust/src/api/: aleo.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/build_tool/lib/src/: environment.dart
rust_builder/ios/: rust_lib_web3_rust_bridge.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_web3_rust_bridge.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
