[package]
name = "rust_lib_web3_rust_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.36"
openssl = { version = "0.10", features = ["vendored"] }


[dependencies.snarkvm-console]
version = "=0.16.19"

[dependencies.snarkvm-circuit]
version = "=0.16.19"


[dependencies.snarkvm-synthesizer]
version = "=0.16.19"
features = [ "async","program","process"]

[dependencies.hex]
version = "0.4.3"


[dependencies.anyhow]
version = "1.0.82"


[dependencies.rand]
version = "0.8.5"

[dependencies.ureq]
features = [ "json" ]
version = "2.9.7"

## Profiles
[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 3
lto = true
